tests/config_module_name_mapper_PROJECT_ROOT-1.0/config_module_name_mapper_PROJECT_ROOT-1.0.exp
Error ------------------------------------------------------------- main.js:6:17

Error: main.js:6
  6: var b: string = test; // Error: number ~> string
                     ^^^^ Cannot assign `test` to `b` because number [1] is incompatible with string [2].
  References:
    3: export let test = 42;
                         ^^ [1]: number. See: src/testmodule.js:3
    6: var b: string = test; // Error: number ~> string
              ^^^^^^ [2]: string


Found 1 error
